fix main screen alignment

--- a/src/screens/Weather/fragments/FragmentWeather.module.scss
+++ b/src/screens/Weather/fragments/FragmentWeather.module.scss
@@ -5,7 +5,7 @@
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: calc(100% - 256px);
+  height: calc(100% - 220px);
 }
 
 // Main weather module
@@ -37,8 +37,13 @@
   color: var(--color-white);
   font-size: 32px;
 }
+.containerGrid {
+  display: grid;
+  place-items: center;
+}
 .copyText {
   margin: 0 16px;
+  margin-top: 16px;
 }
 @media (min-height: 640px) {
   .containerTopInfo {
